--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,6 +14,7 @@ public_folder: /img
 collections:
   - name: "experiences"
     label: "Experiences"
+    label_singular: "Experience"
     folder: "src/pages/experiences"
     create: true
     identifier_field: "company"
@@ -21,6 +22,7 @@ collections:
     fields:
       - {label: "Template Key", name: "templateKey", widget: "hidden", default: "experience"}
       - {label: "Company", name: "company", widget: "string"}
+      - {label: "Logo", name: "logo", widget: "image"}
       - {label: "Start Date", name: "startDate", widget: "datetime", dateFormat: true, timeFormat: false}
       - {label: "End Date", required: false, name: "endDate", widget: "datetime", dateFormat: true, timeFormat: false}
       - {label: "Positions", name: "positions", widget: "list"}
@@ -31,12 +33,14 @@ collections:
 
   - name: "projects"
     label: "Projects"
+    label_singular: "Project"
     folder: "src/pages/projects"
     create: true
     slug: "{{slug}}"
     fields:
       - {label: "Template Key", name: "templateKey", widget: "hidden", default: "project"}
       - {label: "Title", name: "title", widget: "string"}
+      - {label: "Logo", name: "logo", widget: "image"}
       - {label: "Homepage", required: false, name: "homepage", widget: "string"}
       - {label: "Start Date", name: "startDate", widget: "datetime", dateFormat: true, timeFormat: false}
       - {label: "End Date", required: false, name: "endDate", widget: "datetime", dateFormat: true, timeFormat: false}
@@ -48,12 +52,14 @@ collections:
 
   - name: "organizations"
     label: "Organizations"
+    label_singular: "Organization"
     folder: "src/pages/organizations"
     create: true
     slug: "{{slug}}"
     fields:
       - {label: "Template Key", name: "templateKey", widget: "hidden", default: "organization"}
       - {label: "Title", name: "title", widget: "string"}
+      - {label: "Logo", name: "logo", widget: "image"}
       - {label: "Homepage", required: false, name: "homepage", widget: "string"}
       - {label: "Start Date", name: "startDate", widget: "datetime", dateFormat: true, timeFormat: false}
       - {label: "End Date", required: false, name: "endDate", widget: "datetime", dateFormat: true, timeFormat: false}
