--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -25,8 +25,7 @@ collections:
       - {label: "Logo", name: "logo", widget: "image"}
       - {label: "Start Date", name: "startDate", widget: "datetime", dateFormat: true, timeFormat: false}
       - {label: "End Date", required: false, name: "endDate", widget: "datetime", dateFormat: true, timeFormat: false}
-      - {label: "Positions", name: "positions", widget: "list"}
-      - {label: "Descriptions", name: "descriptions", widget: "list", field: {label: "Description", name: "description", widget: "markdown"}}
+      - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Images", required: false, name: "images", widget: "image", allow_multiple: true}
       - {label: "Links", required: false, name: "links", widget: "list"}
       - {label: "Technologies Used", required: false, name: "technologies", widget: "list"}
@@ -44,8 +43,7 @@ collections:
       - {label: "Homepage", required: false, name: "homepage", widget: "string"}
       - {label: "Start Date", name: "startDate", widget: "datetime", dateFormat: true, timeFormat: false}
       - {label: "End Date", required: false, name: "endDate", widget: "datetime", dateFormat: true, timeFormat: false}
-      - {label: "Positions", name: "positions", widget: "list"}
-      - {label: "Descriptions", name: "descriptions", widget: "list", field: {label: "Description", name: "description", widget: "markdown"}}
+      - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Images", required: false, name: "images", widget: "image", allow_multiple: true}
       - {label: "Links", required: false, name: "links", widget: "list"}
       - {label: "Technologies Used", required: false, name: "technologies", widget: "list"}
@@ -63,8 +61,7 @@ collections:
       - {label: "Homepage", required: false, name: "homepage", widget: "string"}
       - {label: "Start Date", name: "startDate", widget: "datetime", dateFormat: true, timeFormat: false}
       - {label: "End Date", required: false, name: "endDate", widget: "datetime", dateFormat: true, timeFormat: false}
-      - {label: "Positions", name: "positions", widget: "list"}
-      - {label: "Descriptions", name: "descriptions", widget: "list", field: {label: "Description", name: "description", widget: "markdown"}}
+      - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Images", required: false, name: "images", widget: "image", allow_multiple: true}
       - {label: "Links", required: false, name: "links", widget: "list"}
 
